updated all packages

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "simon",
+  "name": "code_review",
   "description": "========= # insertApplicationName HAL2000",
   "main": "index.js",
   "license": "ISC",
