--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
